...
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView10"

                        />

                    <Button
                        android:id="@+id/macro_calc"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/calculate"
                        android:layout_marginTop="20dp"></Button>

                </LinearLayout>
...
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/required_protein"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/protein_actual"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical|center_horizontal"
                            android:maxWidth="100dp"
                            android:maxLines="1"
                            android:textColor="@color/launcher_background"
...
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/carbohydrates"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/carbohydrates_actualValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:maxWidth="100dp"
                            android:maxLines="1"
                            android:textColor="@color/toolbar_background"
...
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fats"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/fats_actualValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:maxWidth="100dp"
                            android:maxLines="1"
                            android:textColor="@color/toolbar_background"
...
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/water"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/water_actualValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:maxWidth="100dp"
                            android:maxLines="1"
                            android:textColor="@color/toolbar_background"
...
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Calories"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/calories_actualValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:maxWidth="100dp"
                            android:maxLines="1"
                            android:textColor="@color/toolbar_background"
...
