...
    <string name="pref_user_rec_water"> com.fitnessApp.preference_user_recWater</string>
    <string name="pref_user_rec_calories"> com.fitnessApp.preference_user_recCalories</string>
    <string name="target_goal"> com.fitnessApp.preference_target_goal</string>
    <string name="activity_levelPerWeek"> com.fitnessApp.preference_activity_level_weekly</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="str_ok">OK</string>
    <string name="str_exits">exists</string>
    <string name="str_error">error</string>
    <string name="str_confrimation_sent">Confrimation Sent</string>
    <string name="str_confrimation_sent_text">A new password has been sent to your email</string>
    <string name="str_invalid_email">Invalid email, please try again</string>
    <string name="profile_created">Your profile has been successfully created</string>
...
    <string name="Logging_out_title">Logging Out </string>
    <string name="delete_account">Deleting Account</string>
    <string name="delete_account_confirm">Are you sure you want to delete your account?</string>
    <string name="confirm_logout">Are you sure you want to logout? </string>


    <string name="registration_success">User has been successfully registered</string>
    <string name="registration_exists">UserDB Already exits</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="success_msg">"Registration success"</string>
    <string name="userAlreadyExists_msg">User Already exits</string>
    <string name="default_msg">Something went wrong</string>
    <string name="title_activity_workout">Workout</string>
...
    l
</string>

    <string name="Kcal">
        Kcal
</string>
    <string name="recommended_daily_intake">Recommended Daily Intake</string>


    <!-- Exercise_log-->

    <string name="reps">4 sets X 15 reps</string>

...
